Fri Feb  6 17:19:23 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{dir.h, win32.c} (rb_w32_readdir_with_enc): new function to
	  read entry with specified enc.

	* win32/win32.c (readdir_internal): extract from rb_w32_opendir().

	* win32/win32.c (opendir_internal): extract from rb_w32_readdir().

	* dir.c (dir_read, dir_each): use new READDIR macro instead of readdir()
	  to pass enc for special version of readdir, such as above.

Fri Feb  6 12:11:24 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): set initial default_external before -r.

Fri Feb  6 12:03:47 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): -K and -E in shebang should be reflect to
	  default_external. [ruby-dev:37920]

Fri Feb  6 07:52:57 2009  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (chfunc): type fixed.

Fri Feb  6 02:51:59 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_each_codepoint): update RDoc for
	  String#codepoints.  a patch from Radoslaw Bulat in
	  [ruby-core:21835]

Fri Feb  6 01:09:13 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c (cont_mark, cont_capture, cont_restore_1): use #else instead
	  of #elif.  a patch from NISHIMATSU Takeshi <t_nissie at yahoo.co.jp>
	  in [ruby-list:45856].

Thu Feb  5 20:28:27 2009  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_run_exec_options_err): renamed from
	  rb_run_exec_options.
	  (rb_exec_err): renamed from rb_exec.
	  (rb_fork_err): renamed from rb_fork.
	  (rb_spawn_err): renamed from rb_spawn.
	  (rb_run_exec_options): declared with 1.9.1 compatible signature.
	  (rb_exec): ditto.
	  (rb_fork): ditto.
	  (rb_spawn): ditto.

	* process.c (rb_run_exec_options_err): renamed from
	  rb_run_exec_options.
	  (rb_exec_err): renamed from rb_exec.
	  (rb_fork_err): renamed from rb_fork.
	  (rb_spawn_err): renamed from rb_spawn.
	  (rb_run_exec_options): defined.
	  (rb_exec): ditto.
	  (rb_fork): ditto.
	  (rb_spawn): ditto.

	* io.c: follow above change.
